--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </main><!-- Main Section Ends -->
     <footer>
         <div class="footer-wrapper container">
-            <span class="copyright">&copy; Copyright 2021 Koola Recipes. Developed by: <a href="https://github.com/alroude" target="_blank">Nimrod Musungu</a> </span>
+            <span class="copyright">&copy; Copyright 2021 Koola Recipes. Developed by: <a href="https://github.com/nimrod-musungu" target="_blank">Nimrod Musungu</a> </span>
         </div>
     </footer>
 </body>
